--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
   "homepage": "https://github.com/ChrissieSparling/cool-readme-propagator#readme",
   "dependencies": {
     "inquirer": "^8.2.0"
-  }
+  },
+  "devDependencies": {}
 }
